fix visibility ish

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   line-height: 1.5;
   font-family: 'Poppins', sans-serif;
   margin: 0;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 a,
 a:hover,
@@ -50,6 +50,8 @@ a:visited {
     height: calc(100vh - 70px);
     left: 0;
     text-align: right;
+    width: 0;
+    visibility: hidden;
   }
   .main__nav__menu::after {
     content: url('desert.svg');
@@ -90,6 +92,8 @@ a:visited {
   }
   .main__nav__toggle.open + .main__nav__menu {
     transform: translateX(0);
+    width: 100%;
+    visibility: visible;
   }
 }
 
